--- a/task03_0606/Views/Member/MemberTable.cshtml
+++ b/task03_0606/Views/Member/MemberTable.cshtml
@@ -125,7 +125,7 @@
                 type: 'info',
                 html:
                     '<div class="card card-register mx-auto mt-5">' +
-                    '<div class="card-header"><i class="fa fa-fw fa-pencil"></i>@ViewBag.lastName@ViewBag.firstName</div>' +
+                    '<div class="card-header"><i class="fa fa-fw fa-user-o"></i>@ViewBag.lastName@ViewBag.firstName</div>' +
                     '<div class="card-body">' +
                     
                     '<label>身分證字號：@ViewBag.userId</label></br>' +
