修改商店資料頁面，商店登入改成統編

--- a/task03_0606/Views/Member/StoreTable.cshtml
+++ b/task03_0606/Views/Member/StoreTable.cshtml
@@ -126,7 +126,7 @@
                     '</div>' +
                     '</div>',
                 showCloseButton: true,
-                showCancelButton: true,
+                showCancelButton: false,
                 focusConfirm: false,
 
             })
