--- a/task03_0606/Views/Member/EditStore.cshtml
+++ b/task03_0606/Views/Member/EditStore.cshtml
@@ -1,10 +1,10 @@
 ﻿
 @{
-    ViewBag.Title = "AddStore";
-    Layout = "~/Views/_Member_SuperUser_LayoutPage1.cshtml";
+    ViewBag.Title = "EditStore";
+    Layout = "~/Views/_Store_Home_LayoutPage1.cshtml";
 }
 
-<h2>AddStore</h2>
+<h2>EditStore</h2>
 <div class="container custom-container-width">
     <div class="card card-register mx-auto mt-5">
         <div class="card-header"><i class="fa fa-fw fa-plus-square"></i>新增商店</div>
@@ -21,7 +21,7 @@
 
                 <div class="form-group">
                     <label for="storeId">統一編號 @Html.Raw(ViewBag.storeIdCheck)</label>
-                    <input class="form-control" id="storeId" name="storeId" value="@ViewBag.storeId" type="text" required>
+                    <input class="form-control" id="storeId" name="storeId" value="@ViewBag.storeId" type="text" readonly>
                 </div>
                 <div class="form-group">
                     <div class="form-row">
@@ -56,7 +56,7 @@
                 @*<a class="btn btn-primary btn-block" href="login.html">註冊</a>*@
                 <button type="submit" id="submitBtn" class="btn btn-primary btn-block text-white">確認</button>
             </form>
-            
+
         </div>
     </div>
 </div>
@@ -64,5 +64,20 @@
 <script>
     $("#storeId").blur(function () {
         regForm.submit();
+    });
+    $("#storeDescription").val("@ViewBag.storeDescription");
+    
+</script>
+<script>
+        $("document").ready(function () {
+        if (@ViewBag.sweetAlert == 1) {
+            swal({
+                type: 'success',
+                title: '商店資料已修改！',
+                showConfirmButton: false,
+                timer: 1500
+            })
+        }
     })
+
 </script>
