--- a/task03_0606/Views/Member/MemberTable.cshtml
+++ b/task03_0606/Views/Member/MemberTable.cshtml
@@ -139,7 +139,7 @@
                     '</div>' +
                     '</div>',
                 showCloseButton: true,
-                showCancelButton: true,
+                showCancelButton: false,
                 focusConfirm: false,
 
             })
