--- a/task03_0606/Views/_Store_Home_LayoutPage1.cshtml
+++ b/task03_0606/Views/_Store_Home_LayoutPage1.cshtml
@@ -23,6 +23,7 @@
     <script src="/js/jquery-3.2.1.slim.min.js"></script>
     <script src="/js/jquery.twzipcode.min.js"></script>
     <script src="/js/yi.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2"></script>
 
 
 </head>
@@ -60,8 +61,14 @@
                         <span class="nav-link-text">所有訂單</span>
                     </a>
                 </li>
+                <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
+                    <a class="nav-link" href="/Member/EditStore">
+                        <i class="fa fa-fw fa-pencil"></i>
+                        <span class="nav-link-text">修改商店資料</span>
+                    </a>
+                </li>
 
-               
+
             </ul>
             <ul class="navbar-nav sidenav-toggler">
                 <li class="nav-item">
