--- a/task03_0606/Views/Shared/_CartList.cshtml
+++ b/task03_0606/Views/Shared/_CartList.cshtml
@@ -3,59 +3,77 @@
 
 }
 
+<style>
+    #cartDropdonMenu {
+        min-width: 15rem;
+    }
+    #cartItemMessage {
+        margin-bottom: 0rem;
+    }
+</style>
 
-    <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        <i class="fa fa-fw fa-shopping-cart"></i>
-        <span class="indicator text-warning d-none d-lg-block">
-            <i class="fa fa-fw fa-circle">@string.Format("{0}",currentCart.Count)</i> @*購物筆數*@
-        </span>
-    </a>
-    <div class="dropdown-menu" aria-labelledby="alertsDropdown">
-        <h6 class="dropdown-header">購物車</h6>
-        @if (currentCart.Count > 0)
+   
+    @if (currentCart.Count > 0)
     {
+        <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-fw fa-shopping-cart"></i>
+            <span class="indicator text-warning d-none d-lg-block">
+                <i class="fa fa-fw fa-circle">@string.Format("{0}", currentCart.Count)</i> 
+            </span>
+        </a>
+        <div id="cartDropdonMenu" class="dropdown-menu" aria-labelledby="alertsDropdown">
+            <h6 class="dropdown-header">購物車</h6>
 
+            @foreach (var cartItem in currentCart)
+            {
 
-        foreach (var cartItem in currentCart)
-    {
+            <div class="dropdown-divider"></div>
+            <div class="dropdown-item ">
 
-        <div class="dropdown-divider"></div>
-        <div class="dropdown-item ">
-            <span class="text-danger">
                 <a href="~/#/Products?productID=@cartItem.produtctId">
                     <strong> @cartItem.productName </strong>
+
                 </a>
+                @*<p>@string.Format("數量：{0}  單價：{1}", cartItem.quantity, cartItem.price)</p>*@
                 <a onclick="RemoveFromCart(@cartItem.produtctId)" class="btn btn-sm btn-danger pull-right" aria-label="Delete">
                     <i class="fa fa-trash-o text-white" aria-hidden="true"></i>
                 </a>
-            </span>
-            <div class="dropdown-message">
-                <p>@string.Format("數量：{0}  單價：{1}", cartItem.quantity, cartItem.price)</p>
+
+                <div class="dropdown-message">
+                    <p id="cartItemMessage">@string.Format("數量：{0}  單價：{1}", cartItem.quantity, cartItem.price)</p>
+                </div>
+            </div>
+            }
+            <div class="dropdown-divider"></div>
+            <div class="dropdown-item small">
+                <span>
+                    @*<a href="~/#/ShoppingList?userID=1">詳細購物明細</a>*@
+                    <a href="~/Order/Index" class="btn btn-sm btn-success pull-right"><i class="fa fa-fw fa-dollar"></i>結帳</a>
+                </span>
             </div>
         </div>
-}
-        <div class="dropdown-divider"></div>
-        <div class="dropdown-item small">
-            <span>
-                <a href="~/#/ShoppingList?userID=1">詳細購物明細</a>
-                <a href="~/#/Payment" class="btn btn-sm btn-success pull-right"><i class="fa fa-fw fa-dollar"></i>結帳</a>
+
+    }
+
+    else
+    {
+        <a class="nav-link dropdown-toggle mr-lg-2" id="alertsDropdown" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            <i class="fa fa-fw fa-shopping-cart"></i>
+            <span class="indicator text-warning d-none d-lg-block">
             </span>
-        </div>
+        </a>
+        <div id="cartDropdonMenu" class="dropdown-menu" aria-labelledby="alertsDropdown">
+            <h6 class="dropdown-header">購物車</h6>
 
-
-}
-
-        else{
-        <div class="dropdown-divider"></div>
-        <div class="dropdown-item">
-            <span class="text-danger">
-                <strong> 購物車無任何商品 </strong>
-            </span>
-            <div class="dropdown-message small">
-                This is an automated server response message. All systems are online.
+            <div class="dropdown-divider"></div>
+            <div class="dropdown-item">
+                <span class="text-danger">
+                    <strong> 購物車無目前任何商品 </strong>
+                </span>
             </div>
         </div>
-        }
+
+    }
 
 
 
@@ -96,5 +114,5 @@
         </div>*@
 
 
-    </div>
+    
 
