--- a/task03_0606/Views/Products/Create.cshtml
+++ b/task03_0606/Views/Products/Create.cshtml
@@ -1,108 +1,108 @@
-﻿@model task03_0606.Models.FoodProducts
-
-@{ ViewBag.Title = "Create";
+﻿@model task03_0606.Models.Product
+@{
+    ViewBag.Title = "Create";
 }
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
-<script src="~/Scripts/jquery.validate.min.js"></script>
-<script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
-<body>
+
+<h2>Create</h2>
+
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
 
-    <section id="hire">
-        <form method="post" action="~/Views/Products/ManagerIndex.cshtml">
-            <section class="login-block">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-md-4 login-sec">
-                            <h2 class="text-center">新增商品</h2>
-                            <form class="login-form">
-                                <div class="form-group">
-                                    <label for="exampleInputEmail1" class="text-uppercase">商品編號</label>
-                                    <input type="text" class="form-control" placeholder="">
+    <div class="form-horizontal">
+        <h4>Product</h4>
+        <hr />
+        @if (ViewBag.ResultMessage != null)
+        {
+            @Html.ValidationSummary(true, (string)ViewBag.ResultMessage, new { @class = "text-danger" })
+        }
+        <div class="form-group">
+            @Html.(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleInputEmail1" class="text-uppercase">商品名稱</label>
-                                    <input type="text" class="form-control" placeholder="">
+        <div class="form-group">
+            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleInputEmail1" class="text-uppercase">商品價格</label>
-                                    <input type="text" class="form-control" placeholder="$">
+        <div class="form-group">
+            @Html.LabelFor(model => model.CategoryId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.CategoryId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.CategoryId, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleInputPassword1" class="text-uppercase">商品介紹</label>
-                                    <input type="text" class="form-control" placeholder="">
-                                </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
+        <div class="form-group">
+            @Html.LabelFor(model => model.PublishDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.PublishDate, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PublishDate, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-                                <div class="form-group">
-                                    <label for="exampleInputPassword1" class="text-uppercase">商品檔案</label>
-                                    <div class="col-md-6">
-                                        <input type="file" accept="image/*" onchange="showMyImage(this)" />
-                                        <br />
-                                        <img id="thumbnil" style="width:100%;" src="" alt="image" />
+        <div class="form-group">
+            @Html.LabelFor(model => model.Status, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <div class="checkbox">
+                    @Html.EditorFor(model => model.Status)
+                    @Html.ValidationMessageFor(model => model.Status, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
 
-                                    </div>
-                                </div>
-                                <div class="pull-right">
-                                    <input type="submit" value="確認" class="btn btn-default" />|<input type="submit" value="取消" class="btn btn-default right" />
-                                </div>
-                                      
-                              
-                                   
-                            
+        <div class="form-group">
+            @Html.LabelFor(model => model.DefaultImageId, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.DefaultImageId, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DefaultImageId, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-                            </form>
-                            @*<div class="copy-text">Created with <i class="fa fa-heart"></i> by <a href="http://grafreez.com">Grafreez.com</a></div>*@
-                        </div>
-                        <div class="col-md-8 banner-sec">
-                            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                                <ol class="carousel-indicators">
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                                </ol>
-                                <div class="carousel-inner" role="listbox">
-                                    <div class="carousel-item active">
-                                        <img class="d-block img-fluid" src="https://static.pexels.com/photos/33972/pexels-photo.jpg" alt="First slide">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <div class="banner-text">
-                                                <h2>This is Heaven</h2>
-                                                <p>Specific foods will often change from year to year with passing fads and become characteristic snacks of Taiwan</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img class="d-block img-fluid" src="https://images.pexels.com/photos/7097/people-coffee-tea-meeting.jpg" alt="First slide">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <div class="banner-text">
-                                                <h2>This is Heaven</h2>
-                                                <p>
-                                                    I would like to introduce Taiwan night market food to the foreigners mostly. No matter which place we are, we can also taste the diffent snacks and local products in Taiwan.
-                                                </p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="carousel-item">
-                                        <img class="d-block img-fluid" src="https://images.pexels.com/photos/872957/pexels-photo-872957.jpeg" alt="First slide">
-                                        <div class="carousel-caption d-none d-md-block">
-                                            <div class="banner-text">
-                                                <h2>This is Heaven</h2>
-                                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
+        <div class="form-group">
+            @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Quantity, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Quantity, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
-                            </div>
-                        </div>
-                    </div>
-            </section>
+        <div class="form-group">
+            @Html.LabelFor(model => model.DefaultImageURL, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.DefaultImageURL, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DefaultImageURL, "", new { @class = "text-danger" })
+            </div>
+        </div>
 
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+}
 
-@*<form method="post" action="">
+<div>
+    @Html.ActionLink("Back to List", "Index")
+</div>
+
+<form method="post" action="">
     <div class="form-group">
 
         <div class="col-md-6">
@@ -128,26 +128,13 @@
                 <img id="thumbnil" style="width:20%; margin-top:10px;" src="" alt="image" />
 
             </div>
-            <div class="field msg-box">
-                <from>
-                    <input id="picture" type="file" accept="image/*" onchange="showMyImage(this)" />
-                    <img id="thumbnil" style="width:15%;height:5px margin-top:0px;" src="" alt="image" />
-                    @*<form action="@Url.Action("Upload")" method="post" enctype="multipart/form-data">
-                            <label for="file">Filename:</label>
-                            <input type="file" name="file" id="file" />
-                        </form>*@
-                    @*<label for="msg">商品圖片</label>
-                    <span class="ss-icon">check</span>
-                </from>
-            </div>
-            <br />
-            <br />
-            <input class="button" type="submit" value="確定" /> <input class="button" type="submit" value="取消" />
-</form>
-
-<button type="submit">確定</button>
+            <form action="@Url.Action("Upload")" method="post" enctype="multipart/form-data">
+                <label for="file">Filename:</label>
+                <input type="file" name="file" id="file" />
+            </form>
+            <button type="submit">確定</button>
         </div>
 </form>
 
 
-<hr />*@
+<hr />
