--- a/task03_0606/Views/Products/ManagerIndex.cshtml
+++ b/task03_0606/Views/Products/ManagerIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model  List<task03_0606.Models.FoodProducts>
+﻿@model  List<task03_0606.Models.FoodProduct>
 
 @{
     ViewBag.Title = "ManagerIndex";
@@ -96,16 +96,5 @@
 
     <!-- Bootstrap core JavaScript-->
 
-    <script src="stylesheet" href="responsive-tables.js"</script>
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <!-- Core plugin JavaScript-->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <!-- Page level plugin JavaScript-->
-    <script src="vendor/datatables/jquery.dataTables.js"></script>
-    <script src="vendor/datatables/dataTables.bootstrap4.js"></script>
-    <!-- Custom scripts for all pages-->
-    <script src="js/sb-admin.min.js"></script>
-    <!-- Custom scripts for this page-->
-    <script src="js/sb-admin-datatables.min.js"></script>
+    
 </div>
