--- a/task03_0606/css/Astyle.css
+++ b/task03_0606/css/Astyle.css
@@ -1,165 +1,140 @@
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
   font-weight: 700;
 }
 
-html, body {
-  background: #EEE5E9;
+html,
+body {
+  background: $bg-color;
 }
 
 header {
   width: 95%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: end;
-      -ms-flex-pack: end;
-          justify-content: flex-end;
-  -ms-flex-flow: row wrap;
-      flex-flow: row wrap;
+  justify-content: flex-end;
+  flex-flow: row wrap;
+  ul {
+    padding: 1.2em 0 0.5em;
+  }
+  span {
+    padding: 0 0 0 0.5em;
+  }
+  span,
+  i {
+    color: #2b2d42;
+  }
+  i:nth-of-type(2) {
+    cursor: pointer;
+  }
 }
-header ul {
-  padding: 1.2em 0 0.5em;
-}
-header span {
-  padding: 0 0 0 0.5em;
-}
-header span, header i {
-  color: #2B2D42;
-}
-header i:nth-of-type(2) {
-  cursor: pointer;
-}
-
 .row {
   width: 100%;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  display: -webkit-box;
-  display: -ms-flexbox;
+  justify-content: flex-start;
   display: flex;
-  -ms-flex-flow: row wrap;
-      flex-flow: row wrap;
+  flex-flow: row wrap;
 }
-
-.product, .product--blue, .product--orange, .product--red, .product--green, .product--yellow, .product--pink {
-
-  box-shadow: 1px 5px 15px #CCC;
-  width: 10em;
+.product {
+  box-shadow: 1px 5px 15px #ccc;
+  width: 15em;
   height: auto;
-  border-radius: 6px;
-  padding: 0.5em;
-  margin: 0 auto;
+  border-radius: 3px;
+  padding: 2em;
+  margin: 1em;
   overflow: hidden;
   position: relative;
-  -webkit-box-flex: 1;
-      -ms-flex: auto;
-          flex: auto;
+  flex: auto;
+  &--blue {
+    @extend .product;
+    @include diagBg($blue-card);
+  }
+  &--orange {
+    @extend .product;
+    @include diagBg($orange-card);
+  }
+  &--red {
+    @extend .product;
+    @include diagBg($red-card);
+  }
+  &--green {
+    @extend .product;
+    @include diagBg($green-card);
+  }
+  &--yellow {
+    @extend .product;
+    @include diagBg($yellow-card);
+  }
+  &--pink {
+    @extend .product;
+    @include diagBg($pink-card);
+  }
+  img {
+    max-width: 100%;
+    height: auto !important;
+    text-align: center;
+  }
+  &_inner {
+    display: grid;
+    align-items: center;
+    flex-flow: column wrap;
+    p {
+      color: rgba(255, 255, 255, 0.9);
+    }
+    button {
+      border: 1px solid rgba(255, 255, 255, 0.5);
+      color: #fff;
+      border-radius: 3px;
+      padding: 1em 3em;
+      margin: 1em 0 0 0;
+      background: none;
+      cursor: pointer;
+      transition: background ease-in 0.25s;
+      &:hover {
+        background: rgba(255, 255, 255, 1);
+        color: #2b2d42;
+      }
+      &:before {
+        font-family: FontAwesome;
+        content: "\f07A";
+        color: #fff;
+        position: absolute;
+        font-size: 1.5em;
+        margin: 0 -1.5em;
+      }
+      &:hover:before {
+        color: #2b2d42;
+      }
+    }
+  }
+  &_overlay {
+    background: rgba(255, 255, 255, 0.9);
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    transform: translateY(-500px);
+    opacity: 0;
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    h2 {
+      color: rgba(43, 45, 66, 0.7);
+      font-size: 1.2em;
+      margin: 1em 0;
+    }
+    i {
+      color: rgba(43, 45, 66, 0.7);
+      font-size: 1.5em;
+    }
+  }
 }
-.product--blue {
-  background: -webkit-linear-gradient(180deg, #92DCE5 50%, rgba(255, 255, 255, 0.5) 50%);
-  background: linear-gradient(-45deg, #92DCE5 50%, rgba(255, 255, 255, 0.5) 50%);
-}
-.product--orange {
-  background: -webkit-linear-gradient(135deg, #EF6F6C 50%, rgba(255, 255, 255, 0.5) 50%);
-  background: linear-gradient(-45deg, #EF6F6C 50%, rgba(255, 255, 255, 0.5) 50%);
-}
-.product--red {
-  background: -webkit-linear-gradient(135deg, #E84855 50%, rgba(255, 255, 255, 0.5) 50%);
-  background: linear-gradient(-45deg, #E84855 50%, rgba(255, 255, 255, 0.5) 50%);
-}
-.product--green {
-  background: -webkit-linear-gradient(135deg, #70C1B3 50%, rgba(255, 255, 255, 0.5) 50%);
-  background: linear-gradient(-45deg, #70C1B3 50%, rgba(255, 255, 255, 0.5) 50%);
-}
-.product--yellow {
-  background: -webkit-linear-gradient(135deg, #E8DB7D 50%, rgba(255, 255, 255, 0.5) 50%);
-  background: linear-gradient(-45deg, #E8DB7D 50%, rgba(255, 255, 255, 0.5) 50%);
-}
-.product--pink {
-  background: -webkit-linear-gradient(135deg, #FF386D 50%, rgba(255, 255, 255, 0.5) 50%);
-  background: linear-gradient(-45deg, #FF386D 50%, rgba(255, 255, 255, 0.5) 50%);
-}
-.product img, .product--blue img, .product--orange img, .product--red img, .product--green img, .product--yellow img, .product--pink img {
-  max-width: 100%;
-  height: auto !important;
-  text-align: center;
-}
-.product_inner {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align:start;
-      -ms-flex-align: center;
-          align-items: center;
-  -ms-flex-flow: column wrap;
-      flex-flow: column wrap;
-}
-.product_inner p {
-  color: black;
-}
-.product_inner button {
-  border: 1px solid rgba(255, 255, 255, 0.5);
-  color: #FFF;
-  border-radius: 3px;
-  padding: 1em 3em;
-  margin: 1em 0 0 0;
-  background: none;
-  cursor: pointer;
-  -webkit-transition: background ease-in .25s;
-  transition: background ease-in .25s;
-}
-.product_inner button:hover {
-  background: white;
-  color: #2B2D42;
-}
-.product_inner button:before {
-  font-family: FontAwesome;
-  content: '\f07A';
-  color: #FFF;
-  position: absolute;
-  font-size: 1.5em;
-  margin: 0 -1.5em;
-}
-.product_inner button:hover:before {
-  color: #2B2D42;
-}
-.product_overlay {
-  background: rgba(255, 255, 255, 0.9);
-  width: 100%;
-  height:100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  -webkit-transform: translateY(-500px);
-          transform: translateY(-500px);
-  opacity: 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-flow: column wrap;
-      flex-flow: column wrap;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-.product_overlay h2 {
-  color: rgba(43, 45, 66, 0.7);
-  font-size: 1.2em;
-  margin: 1em 0;
-}
-.product_overlay i {
-  color: rgba(43, 45, 66, 0.7);
-  font-size: 1.5em;
-}
+
 
 /*----------table css*/
 .table-wrapper {
