--- a/task03_0606/Views/Products/Delete.cshtml
+++ b/task03_0606/Views/Products/Delete.cshtml
@@ -3,25 +3,32 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Product</h4>
+<h2>刪除商品</h2>
+<h3>確定要刪除此項商品嗎</h3>
+<div class="alert-danger">
+   
     <hr />
     <dl class="dl-horizontal">
         <dt>
-            @Html.DisplayNameFor(model => model.productName)
+            <h4>Product</h4>
         </dt>
         @*productID=o.productID,
-        productName=o.productName ,
-        productPicture=o.productPicture,
-        salesVolume =o.salesVolume== null ? default(int) :salesVolume,
-        storeProductId =o.storeProductId,
-        productDescription=o.productDescription,
-        productPrice=o.productPrice,
-        storeId=o.storeId,
-        productState=o.productState,
-        categoryID=o.categoryID*@
+            productName=o.productName ,
+            productPicture=o.productPicture,
+            salesVolume =o.salesVolume== null ? default(int) :salesVolume,
+            storeProductId =o.storeProductId,
+            productDescription=o.productDescription,
+            productPrice=o.productPrice,
+            storeId=o.storeId,
+            productState=o.productState,
+            categoryID=o.categoryID*@
+        <dd>
+            商品編號：
+            @Html.DisplayFor(model => model.productID)
+        </dd>
+        <dd>
+            @Html.DisplayFor(model => model.productName)
+        </dd>
         <dd>
             @Html.DisplayFor(model => model.productPicture)
         </dd>
