餐廳菜單排版 ok

--- a/task03_0606/Views/Home/RestaurentMemberPage.cshtml
+++ b/task03_0606/Views/Home/RestaurentMemberPage.cshtml
@@ -175,229 +175,124 @@
             <div class="row">
 
                 @foreach (task03_0606.Models.Product item in Model)
-                {
-                    <div class="card text-center cardMenuItem col-sm-3 ">
-                        <div class="product--blue">
-                            <img class="card-img-top" src="~/photo/@item.productPicture" onclick="modalShow('@item.productName','@item.productDescription','@item.productPicture' ,@item.productID)">
-                            <div class="card-body">
-                                <h5 class="card-title">@item.productName</h5>
-                                <p class="card-text">價格 $ @item.productPrice</p>
-                            </div>
-                            <div class="card-footer">
-                                <div class='product_inner'>
-                                    <button id="button1" onclick="AddToCart(@item.productID)">加入購物車</button>
-                                    <div class='product_overlay'>
-                                        <h2>Added to basket</h2>
-                                        <i class='fa fa-check'></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                }
+    {
+            <div class="card text-center cardMenuItem col-sm-3 product--blue">
 
-
-
-                <div class="card text-center cardMenuItem col-sm-3 ">
-                    <div class="product--blue">
-                        <img class="card-img-top" src="~/photo/E1.jpg">
-                        <div class="card-body">
-                            <h5 class="card-title">卡啦炸雞</h5>
-                            <p class="card-text"> 價格：$75</p>
-                            <p class="card-text"> text .<br />.<br />.<br />.<br />.<br />.<br /></p>
-                        </div>
-                        <div class="card-footer">
-                            <div class='product_inner'>
-                                <button id="button1">加入購物車</button>
-                                <div class='product_overlay'>
-                                    <h2>Added to basket</h2>
-                                    <i class='fa fa-check'></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
+                <img class="card-img-top" src="~/photo/@item.productPicture" onclick="modalShow('@item.productName','@item.productDescription','@item.productPicture' ,@item.productID)">
+                <div class="card-body">
+                    <h5 class="card-title">@item.productName</h5>
+                    <p class="card-text">價格 $ @item.productPrice</p>
                 </div>
-                <div class="card text-center cardMenuItem col-sm-3 ">
-                    <div class="product--blue">
-                        <img class="card-img-top" src="~/photo/E1.jpg">
-                        <div class="card-body">
-                            <h5 class="card-title">卡啦炸雞</h5>
-                            <p class="card-text"> 價格：$75</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class='product_inner'>
-                                <button id="button1">加入購物車</button>
-                                <div class='product_overlay'>
-                                    <h2>Added to basket</h2>
-                                    <i class='fa fa-check'></i>
-                                </div>
-                            </div>
+                <div class="card-footer">
+                    <div class='product_inner'>
+                        <button id="button1" onclick="AddToCart(@item.productID)">加入購物車</button>
+                        <div class='product_overlay'>
+                            <h2>Added to basket</h2>
+                            <i class='fa fa-check'></i>
                         </div>
                     </div>
-
-
                 </div>
-                <div class="card text-center cardMenuItem col-sm-3 ">
-                    <div class="product--blue">
-                        <img class="card-img-top" src="~/photo/E1.jpg">
-                        <div class="card-body">
-                            <h5 class="card-title">卡啦炸雞</h5>
-                            <p class="card-text"> 價格：$75</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class='product_inner'>
-                                <button id="button1">加入購物車</button>
-                                <div class='product_overlay'>
-                                    <h2>Added to basket</h2>
-                                    <i class='fa fa-check'></i>
-                                </div>
-                            </div>
-                        </div>
+
+            </div>
+}
+
+                <div class="card text-center cardMenuItem col-sm-3 product--blue">
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
                     </div>
-
-
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
                 </div>
-                <div class="card text-center cardMenuItem col-sm-3 ">
-                    <div class="product--blue">
-                        <img class="card-img-top" src="~/photo/E1.jpg">
-                        <div class="card-body">
-                            <h5 class="card-title">卡啦炸雞</h5>
-                            <p class="card-text"> 價格：$75</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class='product_inner'>
-                                <button id="button1">加入購物車</button>
-                                <div class='product_overlay'>
-                                    <h2>Added to basket</h2>
-                                    <i class='fa fa-check'></i>
-                                </div>
+
+                <div class="card text-center cardMenuItem col-sm-3 product--blue">
+                    <img class="card-img-top" src="~/photo/E1.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">卡啦炸雞</h5>
+                        <p class="card-text"> 價格：$75</p>
+                        <p class="card-text"> text .<br />.<br />.<br />.<br />.<br />.<br /></p>
+                    </div>
+                    <div class="card-footer">
+                        <div class='product_inner'>
+                            <button id="button1">加入購物車</button>
+                            <div class='product_overlay'>
+                                <h2>Added to basket</h2>
+                                <i class='fa fa-check'></i>
                             </div>
                         </div>
                     </div>
-
-
                 </div>
-                <div class="card text-center cardMenuItem col-sm-3 ">
-                    <div class="product--blue">
-                        <img class="card-img-top" src="~/photo/E1.jpg">
-                        <div class="card-body">
-                            <h5 class="card-title">卡啦炸雞</h5>
-                            <p class="card-text"> 價格：$75</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class='product_inner'>
-                                <button id="button1">加入購物車</button>
-                                <div class='product_overlay'>
-                                    <h2>Added to basket</h2>
-                                    <i class='fa fa-check'></i>
-                                </div>
+
+                <div class="card text-center cardMenuItem col-sm-3 product--blue">
+                    <img class="card-img-top" src="~/photo/E1.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">卡啦炸雞</h5>
+                        <p class="card-text"> 價格：$75</p>
+                    </div>
+                    <div class="card-footer">
+                        <div class='product_inner'>
+                            <button id="button1">加入購物車</button>
+                            <div class='product_overlay'>
+                                <h2>Added to basket</h2>
+                                <i class='fa fa-check'></i>
                             </div>
                         </div>
                     </div>
-
-
                 </div>
-                <div class="card text-center cardMenuItem col-sm-3 ">
-                    <div class="product--blue">
-                        <img class="card-img-top" src="~/photo/E1.jpg">
-                        <div class="card-body">
-                            <h5 class="card-title">卡啦炸雞</h5>
-                            <p class="card-text"> 價格：$75</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class='product_inner'>
-                                <button id="button1">加入購物車</button>
-                                <div class='product_overlay'>
-                                    <h2>Added to basket</h2>
-                                    <i class='fa fa-check'></i>
-                                </div>
+
+                <div class="card text-center cardMenuItem col-sm-3 product--blue">
+                    <img class="card-img-top" src="~/photo/E1.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">卡啦炸雞</h5>
+                        <p class="card-text"> 價格：$75</p>
+                        <p class="card-text"> text .<br />.<br />.<br />.<br />.<br />.<br /></p>
+                    </div>
+                    <div class="card-footer">
+                        <div class='product_inner'>
+                            <button id="button1">加入購物車</button>
+                            <div class='product_overlay'>
+                                <h2>Added to basket</h2>
+                                <i class='fa fa-check'></i>
                             </div>
                         </div>
                     </div>
-
-
                 </div>
-                <div class="card text-center cardMenuItem col-sm-3 ">
-                    <div class="product--blue">
-                        <img class="card-img-top" src="~/photo/E1.jpg">
-                        <div class="card-body">
-                            <h5 class="card-title">卡啦炸雞</h5>
-                            <p class="card-text"> 價格：$75</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class='product_inner'>
-                                <button id="button1">加入購物車</button>
-                                <div class='product_overlay'>
-                                    <h2>Added to basket</h2>
-                                    <i class='fa fa-check'></i>
-                                </div>
+
+                <div class="card text-center cardMenuItem col-sm-3 product--blue">
+                    <img class="card-img-top" src="~/photo/E1.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">卡啦炸雞</h5>
+                        <p class="card-text"> 價格：$75</p>
+                        <p class="card-text"> text .<br />.<br />.<br />.<br />.<br />.<br /></p>
+                    </div>
+                    <div class="card-footer">
+                        <div class='product_inner'>
+                            <button id="button1">加入購物車</button>
+                            <div class='product_overlay'>
+                                <h2>Added to basket</h2>
+                                <i class='fa fa-check'></i>
                             </div>
                         </div>
                     </div>
-
-
                 </div>
-                <div class="card text-center cardMenuItem col-sm-3 ">
-                    <div class="product--blue">
-                        <img class="card-img-top" src="~/photo/E1.jpg">
-                        <div class="card-body">
-                            <h5 class="card-title">卡啦炸雞</h5>
-                            <p class="card-text"> 價格：$75</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class='product_inner'>
-                                <button id="button1">加入購物車</button>
-                                <div class='product_overlay'>
-                                    <h2>Added to basket</h2>
-                                    <i class='fa fa-check'></i>
-                                </div>
+
+                <div class="card text-center cardMenuItem col-sm-3 product--blue">
+                    <img class="card-img-top" src="~/photo/E1.jpg">
+                    <div class="card-body">
+                        <h5 class="card-title">卡啦炸雞</h5>
+                        <p class="card-text"> 價格：$75</p>
+                    </div>
+                    <div class="card-footer">
+                        <div class='product_inner'>
+                            <button id="button1">加入購物車</button>
+                            <div class='product_overlay'>
+                                <h2>Added to basket</h2>
+                                <i class='fa fa-check'></i>
                             </div>
                         </div>
                     </div>
-
-
-                </div>
-                <div class="card text-center cardMenuItem col-sm-3 ">
-                    <div class="product--blue">
-                        <img class="card-img-top" src="~/photo/E1.jpg">
-                        <div class="card-body">
-                            <h5 class="card-title">卡啦炸雞</h5>
-                            <p class="card-text"> 價格：$75</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class='product_inner'>
-                                <button id="button1">加入購物車</button>
-                                <div class='product_overlay'>
-                                    <h2>Added to basket</h2>
-                                    <i class='fa fa-check'></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-                <div class="card text-center cardMenuItem col-sm-3 ">
-                    <div class="product--blue">
-                        <img class="card-img-top" src="~/photo/E1.jpg">
-                        <div class="card-body">
-                            <h5 class="card-title">卡啦炸雞</h5>
-                            <p class="card-text"> 價格：$75</p>
-                        </div>
-                        <div class="card-footer">
-                            <div class='product_inner'>
-                                <button id="button1">加入購物車</button>
-                                <div class='product_overlay'>
-                                    <h2>Added to basket</h2>
-                                    <i class='fa fa-check'></i>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
                 </div>
 
                 <div id="page">
