--- a/task03_0606/Views/Test/Index.cshtml
+++ b/task03_0606/Views/Test/Index.cshtml
@@ -171,8 +171,9 @@
                     </div>
                 </div>
 
-                <div class="card text-center cardMenuItem col-sm-3 ">
-                    <div class="product--blue">
+                <div class="col-sm-3 ">
+                    <div class="card text-center cardMenuItem product--blue">
+
                         <img class="card-img-top" src="..." alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title">Card title</h5>
@@ -184,17 +185,17 @@
                     </div>
                 </div>
 
-                <div class="card text-center cardMenuItem col-sm-3 ">
-                   
-                        <img class="card-img-top" src="..." alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                        </div>
-                        <div class="card-footer">
-                            <small class="text-muted">Last updated 3 mins ago</small>
-                        </div>
-                    
+                <div class="card text-center cardMenuItem col-sm-3 product--blue">
+
+                    <img class="card-img-top" src="..." alt="Card image cap">
+                    <div class="card-body">
+                        <h5 class="card-title">Card title</h5>
+                        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+                    </div>
+                    <div class="card-footer">
+                        <small class="text-muted">Last updated 3 mins ago</small>
+                    </div>
+
                 </div>
 
                 <div class="card cardMenuItem col-sm-3">
